client/src/styles/About.css
body {
    margin: 0;
    /* background-color: red; */
}

.About {
    display: flex;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
    /* background-color: red; */
}

.App-Header a{
    color: blue;
}

.dorjee {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    height: 250px;
    flex-direction: column;
    margin-top: 15px;
    /* background-color: red; */
}

.header {
    font-size: 30px;
    margin: auto;
}

.dan {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    height: 250px;
    flex-direction: column;
}

.riley {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    height: 250px;
    width: auto;
    flex-direction: column;
}

.images {
    width: 250px;
    height: 250px;
}
.container {
    width: auto;
    height: 700px;
    font-size: 25px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.container p {
    width: auto;
    height: 20px;
    
}

.footer {
    background-color: black;
    font-family: "Trebuchet MS";
    font-size: 20px;
}

